--- a/pages/about_us/index.html
+++ b/pages/about_us/index.html
@@ -29,6 +29,7 @@
       </a>
     </div>
     <ul>
+      <li><a href="../about_us/">About us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
       <li><a href="../accomdations/">Stay & passes</a></li>
@@ -57,16 +58,18 @@
       <div></div>
     </div>
     <ul>
+      <li><a href="../about_us/">About us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
       <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
-      <li><a href="../under-construction-template-master/index.html">Intiatives</a></li>
+      <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
       <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../teampage/">Team</a></li>
       <li><a href="../under-construction-template-master/index.html">Sponsors</a></li>
       <li><a href="../reach_Us/">Reach Us</a></li>
+
     </ul>
   </nav>
   <div class="cur" id="circle" style="position: absolute;">
