--- a/pages/reach_Us/index.html
+++ b/pages/reach_Us/index.html
@@ -30,8 +30,7 @@
       </a>
     </div>
     <ul>
-
-      <li><a href="../about_us/">About Us</a></li>
+      <li><a href="../about_us/">About us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
       <li><a href="../accomdations/">Stay & passes</a></li>
@@ -41,9 +40,9 @@
       <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../teampage/">Team</a></li>
       <li><a href="../under-construction-template-master/index.html">Sponsors</a></li>
+      <li><a href="../reach_Us/">Reach Us</a></li>
 
     </ul>
-
   </nav>
   <div style="left: 0;width: 10vw;">
     <a class="img" href="../../index.html">
@@ -59,7 +58,7 @@
       <div></div>
     </div>
     <ul>
-      <li><a href="../about_us/">About Us</a></li>
+      <li><a href="../about_us/">About us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
       <li><a href="../accomdations/">Stay & passes</a></li>
@@ -69,6 +68,7 @@
       <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../teampage/">Team</a></li>
       <li><a href="../under-construction-template-master/index.html">Sponsors</a></li>
+      <li><a href="../reach_Us/">Reach Us</a></li>
 
     </ul>
   </nav>
