--- a/pages/teampage/index.html
+++ b/pages/teampage/index.html
@@ -29,15 +29,15 @@
       </a>
     </div>
     <ul>
-      <!--           <li><a href="">Home</a></li> -->
       <li><a href="../about_us/">About us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
       <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
-      <li><a href="../under-construction-template-master/index.html">Iintiatives</a></li>
+      <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
       <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../teampage/">Team</a></li>
       <li><a href="../under-construction-template-master/index.html">Sponsors</a></li>
       <li><a href="../reach_Us/">Reach Us</a></li>
 
@@ -66,6 +66,7 @@
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
       <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../teampage/">Team</a></li>
       <li><a href="../under-construction-template-master/index.html">Sponsors</a></li>
       <li><a href="../reach_Us/">Reach Us</a></li>
 
