--- a/pages/workshops/index.html
+++ b/pages/workshops/index.html
@@ -37,17 +37,16 @@
       </a>
     </div>
     <ul>
-
-      <!--           <li><a href="">Home</a></li> -->
-      <li><a href="../about_us/">About Us</a></li>
+      <li><a href="../about_us/">About us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
-      <li><a href="../under-construction-template-master/">Guests</a></li>
+      <li><a href="../under-construction-template-master/index.html">Guests</a></li>
       <li><a href="../accomdations/">Stay & passes</a></li>
-      <li><a href="../under-construction-template-master/">Exhibits</a></li>
-      <li><a href="../under-construction-template-master/">Initiatives</a></li>
-      <li><a href="../under-construction-template-master/">Highlights</a></a></li>
+      <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
+      <li><a href="../workshops/">Workshops</a></li>
+      <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
+      <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../teampage/">Team</a></li>
-      <li><a href="../under-construction-template-master/">Sponsors</a></li>
+      <li><a href="../under-construction-template-master/index.html">Sponsors</a></li>
       <li><a href="../reach_Us/">Reach Us</a></li>
 
     </ul>
@@ -75,15 +74,16 @@
       <div></div>
     </div>
     <ul>
-      <li><a href="../about_us/">About Us</a></li>
+      <li><a href="../about_us/">About us</a></li>
       <li><a href="../competitions/">Competitions</a></li>
-      <li><a href="../under-construction-template-master/">Guests</a></li>
+      <li><a href="../under-construction-template-master/index.html">Guests</a></li>
       <li><a href="../accomdations/">Stay & passes</a></li>
-      <li><a href="../under-construction-template-master/">Exhibits</a></li>
-      <li><a href="../under-construction-template-master/">Intiatives</a></li>
-      <li><a href="../under-construction-template-master/">Highlights</a></a></li>
+      <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
+      <li><a href="../workshops/">Workshops</a></li>
+      <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
+      <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../teampage/">Team</a></li>
-      <li><a href="../under-construction-template-master/">Sponsors</a></li>
+      <li><a href="../under-construction-template-master/index.html">Sponsors</a></li>
       <li><a href="../reach_Us/">Reach Us</a></li>
 
     </ul>
